@@ -1541,16 +1541,16 @@
                 (declare (ignore args))
                 (progn (warn "~S is not implemented: ~S" ',name form)
                        form))))
-(undefined XLIB:DISPLAY-RESOURCE-ID-BASE)
-(undefined XLIB:DISPLAY-RESOURCE-ID-MASK)
-(undefined XLIB:DISPLAY-TRACE)
-(undefined XLIB:DRAW-GLYPH)
-(undefined XLIB:DRAW-IMAGE-GLYPH)
-(undefined XLIB:TRANSLATE-DEFAULT)
-(undefined XLIB:QUEUE-EVENT)
-(undefined XLIB:CHANGE-KEYBOARD-MAPPING)
-(undefined XLIB:KEYBOARD-MAPPING)
-(undefined XLIB:SHAPE-EXTENTS)
-(undefined XLIB:SHAPE-RECTANGLES)
-(undefined XLIB:DEFAULT-KEYSYM-INDEX)
+(undefined DISPLAY-RESOURCE-ID-BASE)
+(undefined DISPLAY-RESOURCE-ID-MASK)
+(undefined DISPLAY-TRACE)
+(undefined DRAW-GLYPH)
+(undefined DRAW-IMAGE-GLYPH)
+(undefined TRANSLATE-DEFAULT)
+(undefined QUEUE-EVENT)
+(undefined CHANGE-KEYBOARD-MAPPING)
+(undefined KEYBOARD-MAPPING)
+(undefined SHAPE-EXTENTS)
+(undefined SHAPE-RECTANGLES)
+(undefined DEFAULT-KEYSYM-INDEX)
 )
